# noise

./: Cargo.toml  README.md
task1/: Cargo.toml  README.md
task1/src/: error.rs  lib.rs  main.rs  random.rs  test.rs
task2/: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
task2/src/: lib.rs
task3/: Cargo.toml  README.md
task3/src/: lib.rs  main.rs
