[package]
name = "task2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "console"] }
js-sys = "0.3"
tokio-tungstenite-wasm = { version = "0.3.1", features = ["native-tls"] }
futures-util = "0.3.30"
